--- a/src/fuzzers/dockerfile
+++ b/src/fuzzers/dockerfile
@@ -6,14 +6,72 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN mkdir /home/dev  
 RUN apt update && apt -y install vim git tar gzip build-essential curl nginx wget
 
-
-### /home/dev 폴더 이동   
+### /home/dev 폴더 이동
 WORKDIR /home/dev
 
-COPY setup.sh /home/dev/setup.sh
-RUN export PATH=$PATH:/root/.dotnet
-RUN chmod +x setup.sh
-RUN ./setup.sh
+######################### Base Install ##########################
+RUN apt update
+RUN apt upgrade -y
+RUN apt install curl wget make gcc cmake git -y
+RUN apt install libssl-dev libz3-dev pkg-config build-essential clang -y
+RUN apt install python3 python3-pip -y
+RUN python3 -m pip install numpy
+RUN python3 -m pip install crytic-compile
 
+# install openssl
+RUN wget https://www.openssl.org/source/openssl-1.1.1w.tar.gz
+RUN tar xf ./openssl-1.1.1w.tar.gz
+RUN cd openssl-1.1.1w
+RUN ./config --prefix=/usr/local/ssl --openssldir=/usr/local/ssl shared
+RUN make
+RUN make install_sw
+RUN cd ../
+
+# install dotnet
+RUN wget https://dot.net/v1/dotnet-install.sh -O dotnet-install.sh
+RUN chmod +x ./dotnet-install.sh
+RUN ./dotnet-install.sh --channel 5.0
+RUN echo "export PATH=\$PATH:/root/.dotnet" >> /root/.bashrc
+
+# install rust
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+
+# install go
+RUN wget https://go.dev/dl/go1.21.4.linux-amd64.tar.gz
+RUN rm -rf /usr/local/go && tar -C /usr/local -xzf go1.21.4.linux-amd64.tar.gz
+RUN echo "export PATH=\$PATH:/usr/local/go/bin" >> /root/.bashrc
+
+RUN source /root/.bashrc
+
+# install solc
+RUN apt-get install software-properties-common
+RUN add-apt-repository ppa:ethereum/ethereum
+RUN add-apt-repository ppa:ethereum/ethereum-dev
+RUN apt-get update
+RUN apt-get install solc -y
+RUN python3 -m pip install solc-select
+RUN solc-select install all
+#################################################################
+
+######################### IR-Fuzz ###############################
+RUN git clone https://github.com/Messi-Q/IR-Fuzz.git
+RUN cd ./IR-Fuzz
+RUN ./initial_.sh
+RUN cd ../
+#################################################################
+
+######################### Smartian ##############################
+RUN git clone https://github.com/SoftSec-KAIST/Smartian.git
+RUN cd ./Smartian
+RUN git submodule update --init --recursive
+RUN cd ../
+#################################################################
+
+######################### ityfuzz ###############################
+RUN curl -L https://ity.fuzz.land/ | bash
+RUN source /root/.bashrc
+# ityfuzzup
+
+#################################################################
 
 EXPOSE 80 8080
