--- a/src/fuzzers/dockerfile
+++ b/src/fuzzers/dockerfile
@@ -15,9 +15,15 @@ RUN apt update
 RUN apt upgrade -y
 RUN apt install curl wget make gcc cmake git vim tar gzip nginx -y
 RUN apt install libssl-dev libz3-dev pkg-config build-essential clang -y
+RUN apt-get install libleveldb-dev libsnappy-dev sqlite3 -y
 RUN apt install python3 python3-pip -y
 RUN python3 -m pip install numpy
 RUN python3 -m pip install crytic-compile
+
+# install git lfs
+RUN curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | bash
+RUN apt-get install git-lfs -y
+RUN git lfs install
 
 # install openssl
 RUN wget https://www.openssl.org/source/openssl-1.1.1w.tar.gz
@@ -60,6 +66,7 @@ RUN solc-select install all
 RUN git clone https://github.com/Messi-Q/IR-Fuzz.git
 WORKDIR ./IR-Fuzz
 RUN ./initial_.sh
+RUN git lfs pull
 WORKDIR ../
 #################################################################
 
