--- a/src/fuzzers/dockerfile
+++ b/src/fuzzers/dockerfile
@@ -75,6 +75,7 @@ WORKDIR ../
 RUN git clone https://github.com/SoftSec-KAIST/Smartian.git
 WORKDIR ./Smartian
 RUN git submodule update --init --recursive
+RUN make
 WORKDIR ../
 #################################################################
 
