--- a/src/fuzzers/docker-compose.yml
+++ b/src/fuzzers/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "80:80"
-      - "8080:8080"
+    # ports:
+      # - "80:80"
+      # - "8080:8080"
     
