--- a/src/fuzzers/dockerfile
+++ b/src/fuzzers/dockerfile
@@ -19,6 +19,7 @@ RUN apt-get install libleveldb-dev libsnappy-dev sqlite3 -y
 RUN apt install python3 python3-pip python-is-python3 -y
 RUN python3 -m pip install numpy
 RUN python3 -m pip install crytic-compile
+RUN python3 -m pip install bs4
 
 # install git lfs
 RUN curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | bash
